--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_images: ^1.1.2
+  dot_navigation_bar: ^1.0.1+4
 
 dev_dependencies:
   flutter_test:
