--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_images: ^1.1.2
   dot_navigation_bar: ^1.0.1+4
+  iconsax: ^0.0.8
+  twemoji: ^0.4.3
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,20 @@ flutter:
     - images/box.png
     - images/icons8-wallet-80.png
     - images/icons8-burger-80.png
+    - images/bike.png
+    - images/img_5.png
+    - images/img_6.png
+    - images/img_7.png
+    - images/img_8.png
+    - images/img_9.png
+    - images/img_10.png
+    - images/img_11.png
+    - images/img_12.png
+    - images/img_13.png
+    - images/img_14.png
+    - images/img_16.png
+    - images/img_15.png
+    - images/img_17.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
